--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,14 @@ md-icon.mdi.mdi-plus-circle.ng-scope.material-icons {
     bottom: 8px;
     position: relative;
 }
+
+md-input-container > md-select {
+    position: relative;
+    top: -12px;
+}
+
+.md-button.md-warn {
+    color: rgb(255,87,34);
+    position: relative;
+    top: -10px;
+}
